<resources>
    <string name="app_name">ZPI App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_interactions">Interakcje</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_interactions">Brak interakcji</string>

    <string-array name="drug_array">
        <item>ACC Optima</item>
        <item>Dentosept A Mini spray</item>
        <item>Gripex Intensive</item>
        <item>Ketonal active</item>
        <item>Maxon active</item>
        <item>Meloxicam</item>
        <item>Nefrostone</item>
        <item>Nervomix control</item>
        <item>Urofuraginum</item>
    </string-array>

    <string name="found_n_interactions">Znaleziono interakcje: %1$d</string>
    <string name="connection_error">Nie udało się połączyć z serwerem</string>

    <string name="newCareAssistantLoginEditTextHint">Login opiekuna</string>
    <string name="careAssistantsNotFoundText">Dodaj nowego opiekuna</string>
    <string name="careAssistantsConnectionProblemText">Problem z połączeniem</string>
    <string name="careAssistantsFragmentActionBar">Opiekunowie</string>

    <string name="newPhysicianLoginEditTextHint">Numer pws lekarza</string>
    <string name="physiciansNotFoundText">Dodaj nowego lekarza</string>
    <string name="physiciansConnectionProblemText">Problem z połączeniem</string>
    <string name="physiciansFragmentActionBar">Lekarze</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Hasło</string>
    <string name="forgot_password">Zapomniałeś hasła?</string>
    <string name="action_sign_in">Zaloguj</string>
    <string name="action_sign_up">Zarejestruj</string>
    <string name="error_login_empty">Login nie moze byc pusty</string>
    <string name="error_login_too_short">Login musi mieć co najmniej %1$d znakow</string>
    <string name="error_email_empty">Email nie moze byc pusty</string>
    <string name="error_email_invalid">Ten adres email jest nieprawidłowy</string>
    <string name="error_password_empty">Haslo nie moze byc puste</string>
    <string name="error_password_too_short">Haslo musi mieć co najmniej %1$d znakow</string>
    <string name="signing_up">Rejestracja</string>
    <string name="signing_in">Logowanie</string>
    <string name="title_drug_history">Historia zażywania</string>
    <string name="title_current_drugs">Leki</string>

    <string name="annotation">Adnotacja</string>
    <string name="CareAssistantMenuText">Opiekunowie</string>
    <string name="PhysiciansMenuText">Lekarze</string>
    <string name="AccountMenuText">Konto</string>
    <string name="care_assistant_chargesNotFoundText">Nie znaleziono podopiecznych</string>
    <string name="care_assistant_chargesConnectionProblemText">Problem z połączeniem</string>
    <string name="newChatgesLoginEditTextHint">Login podopiecznego</string>
    <string name="title_activity_care_asstistant_perspective">CareAsstistantPerspectiveActivity
    </string>

</resources>
