<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications"/>

    <item
        android:id="@+id/navigation_drug_history"
        android:icon="@drawable/ic_baseline_history_24px"
        android:title="@string/title_drug_history"/>

    <item
        android:id="@+id/navigaation_iteractions"
        android:icon="@drawable/ic_compare_arrows_black_24px"
        android:title="@string/title_interactions"/>
</menu>
