<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:id="@+id/physicians_root"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context="com.zpi.zpiapp.careAssistants.CareAssistantsFragment">

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/physicians_add_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF"
        android:elevation="4dp"
        android:padding="8dp"
        android:translationZ="2dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/physicians_add_panel_fab"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/physicians_add_panel_pwz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/newPhysicianLoginEditTextHint"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/physicians_add_panel_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_person_add_white_24px"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textInputLayout"
            app:layout_constraintTop_toTopOf="parent"/>
    </android.support.constraint.ConstraintLayout>

    <FrameLayout
        android:id="@+id/physicians_frame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/physicians_add_panel">

        <!--Lista opiekunow-->
        <FrameLayout
            android:id="@+id/physicians_found_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/physicians_found_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </FrameLayout>

        <!--Nie znaleziono opiekunow-->
        <LinearLayout
            android:id="@+id/physicians_not_found_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp"
            android:visibility="visible">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:contentDescription="@string/physiciansNotFoundText"
                android:src="@drawable/ic_person_add_black_24dp"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/physiciansNotFoundText"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                tools:text="@string/physiciansNotFoundText"/>
        </LinearLayout>

        <!--Problem z polaczeniem-->
        <LinearLayout
            android:id="@+id/physicians_connection_problem_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="120dp"

                android:contentDescription="@string/physiciansConnectionProblemText"
                android:src="@drawable/ic_autorenew_black_24dp"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/physiciansConnectionProblemText"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
        </LinearLayout>

    </FrameLayout>

</android.support.constraint.ConstraintLayout>
